Added database seeding

--- a/src/Services/Catalog/Catalog.API/appsettings.json
+++ b/src/Services/Catalog/Catalog.API/appsettings.json
@@ -5,8 +5,7 @@
   "Logging": {
     "LogLevel": {
       "Default": "Information",
-      "Microsoft.AspNetCore": "Warning",
-      "Marten": "Warning"
+      "Microsoft.AspNetCore": "Warning"
     }
   },
   "AllowedHosts": "*"
