--- a/src/docker-compose.override.yml
+++ b/src/docker-compose.override.yml
@@ -15,7 +15,9 @@ services:
             - ASPNETCORE_ENVIRONMENT=Development
             - ASPNETCORE_HTTP_PORTS=8080
             - ASPNETCORE_HTTPS_PORTS=8081
-            - ConnectionStrings__CatalogDb=Server=localhost;Port=5432;Database=CatalogDb;User Id=postgres;Password=postgres;Include Error Detail=true
+            - ConnectionStrings__CatalogDb=Server=catalogdb;Port=5432;Database=CatalogDb;User Id=postgres;Password=postgres;Include Error Detail=true
+            - Kestrel__EndPoints__WebApi__Protocols=Http1
+            - Kestrel__EndPoints__WebApi__Url=http://+:8080
         depends_on:
             - catalogdb
         ports:
