--- a/src/docker-compose.override.yml
+++ b/src/docker-compose.override.yml
@@ -49,11 +49,13 @@ services:
             - ASPNETCORE_HTTPS_PORTS=8081
             - ConnectionStrings__BasketDb=Server=basketdb;Port=5432;Database=BasketDb;User Id=postgres;Password=postgres;Include Error Detail=true
             - ConnectionStrings__Redis=distributedcache:6379
+            - GrpcSettings_DiscountUrl=https://discount.grpc:8081
             - Kestrel__EndPoints__WebApi__Protocols=Http1
             - Kestrel__EndPoints__WebApi__Url=http://+:8080
         depends_on: 
             - basketdb
             - distributedcache
+            - discount.grpc
         ports:
             - "6001:8080"
             - "6061:8081"
