--- a/src/docker-compose.yml
+++ b/src/docker-compose.yml
@@ -5,6 +5,8 @@ services:
         image: postgres
     distributedcache:
         image: redis
+    orderdb:
+        image: mcr.microsoft.com/mssql/server:2022-latest
 
     catalog.api:
         image: ${DOCKER_REGISTRY-}catalogapi
