--- a/src/docker-compose.yml
+++ b/src/docker-compose.yml
@@ -7,6 +7,8 @@ services:
         image: redis
     orderdb:
         image: mcr.microsoft.com/mssql/server:2022-latest
+    messagebroker:
+        image: rabbitmq:management
 
     catalog.api:
         image: ${DOCKER_REGISTRY-}catalogapi
