--- a/src/docker-compose.yml
+++ b/src/docker-compose.yml
@@ -25,6 +25,11 @@ services:
         build:
             context: .
             dockerfile: Services/Discount/Discount.Grpc/Dockerfile
+    ordering.api:
+        image: ${DOCKER_REGISTRY-}orderingapi
+        build:
+            context: .
+            dockerfile: Services/Ordering/Ordering.API/Dockerfile
 
 volumes:
     postgres_catalog:
