Added rate limiter

--- a/src/ApiGateways/YarpApiGateway/appsettings.json
+++ b/src/ApiGateways/YarpApiGateway/appsettings.json
@@ -13,22 +13,35 @@
         "Match": {
           "Path": "/catalog-service/{**catch-all}"
         },
-        "Transforms": [ { "PathPattern": "{**catch-all}" } ]
+        "Transforms": [
+          {
+            "PathPattern": "{**catch-all}"
+          }
+        ]
       },
       "basket-route": {
         "ClusterId": "basket-cluster",
         "Match": {
           "Path": "/basket-service/{**catch-all}"
         },
-        "Transforms": [ { "PathPattern": "{**catch-all}" } ]
+        "Transforms": [
+          {
+            "PathPattern": "{**catch-all}"
+          }
+        ]
       },
       "ordering-route": {
         "ClusterId": "ordering-cluster",
+        "RateLimiterPolicy": "fixed",
         "Match": {
           "Path": "/ordering-service/{**catch-all}"
         },
-        "Transforms": [ { "PathPattern": "{**catch-all}" } ]
-      },
+        "Transforms": [
+          {
+            "PathPattern": "{**catch-all}"
+          }
+        ]
+      }
     },
     "Clusters": {
       "catalog-cluster": {
@@ -38,7 +51,7 @@
           }
         }
       },
-      "basket-cluster":{
+      "basket-cluster": {
         "Destinations": {
           "destination1": {
             "Address": "http://localhost:6001"
