--- a/src/docker-compose.override.yml
+++ b/src/docker-compose.override.yml
@@ -44,7 +44,7 @@ services:
         ports:
             - "5672:5672"
             - "15672:15672"
-        
+
     catalog.api:
         environment:
             - ASPNETCORE_ENVIRONMENT=Development
@@ -117,6 +117,23 @@ services:
         ports: 
             - "6003:8080"
             - "6063:8081"
+        volumes:
+            - ${APPDATA}/Microsoft/UserSecrets:/home/app/.microsoft/usersecrets:ro
+            - ${APPDATA}/ASP.NET/Https:/home/app/.aspnet/https:ro
+    yarpapigateway:
+        environment:
+            - ASPNETCORE_ENVIRONMENT=Development
+            - ASPNETCORE_HTTP_PORTS=8080
+            - ASPNETCORE_HTTPS_PORTS=8081
+            - Kestrel__EndPoints__WebApi__Protocols=Http1
+            - Kestrel__EndPoints__WebApi__Url=http://+:8080
+        depends_on:
+            - catalog.api
+            - basket.api
+            - ordering.api
+        ports:
+            - "6004:8080"
+            - "6064:8081"
         volumes:
             - ${APPDATA}/Microsoft/UserSecrets:/home/app/.microsoft/usersecrets:ro
             - ${APPDATA}/ASP.NET/Https:/home/app/.aspnet/https:ro
