--- a/src/docker-compose.yml
+++ b/src/docker-compose.yml
@@ -31,6 +31,11 @@ services:
             context: .
             dockerfile: Services/Ordering/Ordering.API/Dockerfile
 
+    yarpapigateway:
+        image: ${DOCKER_REGISTRY-}yarpapigateway
+        build:
+            context: .
+            dockerfile: ApiGateways/YarpApiGateway/Dockerfile
 volumes:
     postgres_catalog:
     postgres_basket:
