--- a/src/WebApps/Shopping.Web/Shopping.Web.csproj
+++ b/src/WebApps/Shopping.Web/Shopping.Web.csproj
@@ -6,4 +6,8 @@
     <ImplicitUsings>enable</ImplicitUsings>
   </PropertyGroup>
 
+  <ItemGroup>
+    <PackageReference Include="Refit.HttpClientFactory" Version="8.0.0" />
+  </ItemGroup>
+
 </Project>
