Added static files, partial views, layout and index page

--- a/src/WebApps/Shopping.Web/Shopping.Web.csproj
+++ b/src/WebApps/Shopping.Web/Shopping.Web.csproj
@@ -10,4 +10,8 @@
     <PackageReference Include="Refit.HttpClientFactory" Version="8.0.0" />
   </ItemGroup>
 
+  <ItemGroup>
+    <_ContentIncludedByDefault Remove="wwwroot\css\site.css" />
+  </ItemGroup>
+
 </Project>
