--- a/src/docker-compose.override.yml
+++ b/src/docker-compose.override.yml
@@ -137,3 +137,20 @@ services:
         volumes:
             - ${APPDATA}/Microsoft/UserSecrets:/home/app/.microsoft/usersecrets:ro
             - ${APPDATA}/ASP.NET/Https:/home/app/.aspnet/https:ro
+
+    web.app:
+        environment:
+            - ASPNETCORE_ENVIRONMENT=Development
+            - ASPNETCORE_HTTP_PORTS=8080
+            - ASPNETCORE_HTTPS_PORTS=8081
+            - ApiSettings__GatewayAddress=http://yarpapigateway:8080
+            - Kestrel__EndPoints__WebApi__Protocols=Http1
+            - Kestrel__EndPoints__WebApi__Url=http://+:8080
+        depends_on:
+            - yarpapigateway
+        ports:
+            - "6005:8080"
+            - "6065:8081"
+        volumes:
+            - ${APPDATA}/Microsoft/UserSecrets:/home/app/.microsoft/usersecrets:ro
+            - ${APPDATA}/ASP.NET/Https:/home/app/.aspnet/https:ro
