--- a/src/docker-compose.yml
+++ b/src/docker-compose.yml
@@ -36,7 +36,12 @@ services:
         build:
             context: .
             dockerfile: ApiGateways/YarpApiGateway/Dockerfile
+            
+    web.app:
+        image: ${DOCKER_REGISTRY-}shoppingweb
+        build:
+            context: .
+            dockerfile: WebApps/Shopping.Web/Dockerfile
 volumes:
     postgres_catalog:
     postgres_basket:
-
